<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_others_footprint_costmap_plugin</name>
  <version>1.0.0</version>
  <description>Run-time plugin for others footprint layer</description>
  <maintainer email="sungkyu.kang@lge.com">Sungkyu Kang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <export>
    <costmap_2d plugin="${prefix}/others_footprint_layer1.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
